Update prettier config and editorconfig, and format files accordingly

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,23 +1,12 @@
 {
-    "moduleFileExtensions": [
-        "json",
-        "ts",
-        "js"
-    ],
-    "roots": [
-        "<rootDir>/test"
-      ],    
-    "testEnvironment": "node",
-    "testRegex": ".spec.ts$",
-    "transform": {
-        "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage",
-    "coveragePathIgnorePatterns": [
-        "node_modules",
-        "test"
-    ],
-    "setupFiles": [
-
-    ]
+  "moduleFileExtensions": ["json", "ts", "js"],
+  "roots": ["<rootDir>/test"],
+  "testEnvironment": "node",
+  "testRegex": ".spec.ts$",
+  "transform": {
+    "^.+\\.(t|j)s$": "ts-jest"
+  },
+  "coverageDirectory": "../coverage",
+  "coveragePathIgnorePatterns": ["node_modules", "test"],
+  "setupFiles": []
 }
