--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,14 +6,12 @@
       "request": "launch",
       "name": "Jest All",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": [
-        "--runInBand"
-      ],
+      "args": ["--runInBand"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "disableOptimisticBPs": true,
       "windows": {
-        "program": "${workspaceFolder}/node_modules/jest/bin/jest",
+        "program": "${workspaceFolder}/node_modules/jest/bin/jest"
       }
     },
     {
@@ -21,23 +19,13 @@
       "request": "launch",
       "name": "Jest Current File",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": [
-        "${relativeFile}",
-        "--config",
-        "${workspaceRoot}/jest.config.json",
-        "--watch"
-      ],
+      "args": ["${relativeFile}", "--config", "${workspaceRoot}/jest.config.json", "--watch"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "disableOptimisticBPs": true,
       "windows": {
         "program": "${workspaceFolder}/node_modules/jest/bin/jest",
-        "args": [
-          "${relativeFile}",
-          "--config",
-          "${workspaceRoot}/jest.config.json",
-          "--watch"
-        ],
+        "args": ["${relativeFile}", "--config", "${workspaceRoot}/jest.config.json", "--watch"]
       }
     }
   ]
